// $Id: CHANGELOG.txt,v 1.72 2010/03/29 04:02:36 alexb Exp $


Feeds 6.x 1.0 xxxxx xx, 2010-xx-xx
----------------------------------

- #754938 Monkey Master: FeedsCSVParser.inc uses strtolower() while parsing
  UTF-8 files.
- #736684 Souvent22, Mixologic: FeedsDateTime & Batch DateTime causes core
  dumps.
- #750168 jtr: _parser_common_syndication_title does not strip html tags before
  constructing a title.
- #648080 pvhee: FeedsNodeProcessor - static caching of mapping targets makes
  mapping fail with multiple feed configurations.
- #735444 Doug Preble: PubSubHubbub - Fix "Subscription refused by callback URL"
  with PHP 5.2.0.
- alex_b: Suppress namespace warnings when parsing feeds for subscription in
  PuSHSubscriber.inc
- #724184 ekes: catch failures when parsing for PubSubHubbub hub and self.
- #706984 lyricnz: Add FeedsSimplePie::parseExtensions() to allow parsing to be
  customized.
- #728854 Scott Reynolds: Fix $queue->createItem() fails.
- #707098 alex_b: Improve performance of nodeapi and access checks.
- #726012 alex_b: Fix RSS descriptions not being reset in
  common_syndication_parser.inc.
- alex_b: Fix a typo in the return value of process() in FeedsTermProcessor.
- alex_b: Stop PubSubHubbub from subscribing if it is not enabled.
- #711664 neclimdul: guarantee compatibility with CTools 1.4  by declaring that
  Feeds uses hooks to define plugins via hook_ctools_plugin_plugins().
- #718460 jerdavis: In FeedsNodeProcessor, clear items only for the current
  importer id.
- #718474 jerdavis: In FeedsNodeProcessor, check for duplicate items within
  same importer id.

Feeds 6.x 1.0 Alpha 12, 2010-02-23
----------------------------------

- #600584 alex_b: PubSubHubbub support.
- alex_b: Debug log.
- alex_b: Add sourceSave() and sourceDelete() methods notifying plugin
  implementers of a source being saved or deleted.
- #717168 nicholasThompson: Fix feeds UI JS doesn't select labels correctly.